syntax = "proto3";

package user;

// 사용자 서비스 정의
service UserService {
  // 사용자 정보 조회
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // 사용자 프로필 업데이트
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  
  // 사용자 삭제 (소프트 삭제)
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // 사용자 목록 조회
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);

  // 비밀번호 변경
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

// 사용자 조회 요청
message GetUserRequest {
  string user_id = 1;
}

// 사용자 조회 응답
message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string sign_type = 5;
  bool is_verified = 6;
  bool is_deleted = 7;
  string created_at = 8;
  string updated_at = 9;
}

// 프로필 업데이트 요청
message UpdateProfileRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

// 프로필 업데이트 응답
message UpdateProfileResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string sign_type = 5;
  bool is_verified = 6;
  bool is_deleted = 7;
  string created_at = 8;
  string updated_at = 9;
}

// 사용자 삭제 요청
message DeleteUserRequest {
  string user_id = 1;
}

// 사용자 삭제 응답
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// 사용자 목록 조회 요청
message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

// 사용자 목록 조회 응답
message GetUsersResponse {
  repeated UserInfo users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

// 사용자 정보
message UserInfo {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string sign_type = 5;
  bool is_verified = 6;
  bool is_deleted = 7;
  string created_at = 8;
  string updated_at = 9;
}

// 비밀번호 변경 요청
message ChangePasswordRequest {
  string user_id = 1;
  string new_password = 2;
}

// 비밀번호 변경 응답
message ChangePasswordResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string sign_type = 5;
  bool is_verified = 6;
  bool is_deleted = 7;
  string created_at = 8;
  string updated_at = 9;
}
